syntax = "proto3";
package chat_with_friends_service;

option go_package = "./chat_with_friends_service";

option java_package = "generated_grpc.chat_with_friends_service_grpc";
option java_outer_classname = "chat_with_friends_service_grpc_types";

service ChatWithFriendsService {
    rpc AddOrUpdateFriend(AddOrUpdateFriendRequest) returns (AddOrUpdateFriendResponse);
    rpc GetFriendList(GetFriendListRequest) returns (GetFriendListResponse);
    rpc DeleteFriend(DeleteFriendRequest) returns (DeleteFriendResponse);
}

enum ChatMessageType {
  text = 0;
  picture = 1;
  audio = 2;
  video = 3;
  file = 4;
}

message ChatMessage {
    string from_email = 1;
    string to_email = 2;
    ChatMessageType message_type = 3;
    string content = 4; //base64
    int32 date_in_seconds_in_unix_timestamps = 5; //seconds (10-digit)
}

// one user can only be added 100 times by others per day(24hours); but she/he can add others without limitation
message AddOrUpdateFriendRequest {
    string your_email = 1;
    Friend friend = 2;
}

message Friend {
    string email = 1;
    string name = 2;
    string nickname = 3;
    bool got_blocked = 4;
    bool super_like = 5;
}

message AddOrUpdateFriendResponse {
    optional string error = 1;
}

message GetFriendListRequest {
    string your_email = 1;
}

message GetFriendListResponse {
    optional string error = 1;
    repeated Friend friend_list = 2; 
}

message DeleteFriendRequest {
    string your_email = 1;
    string friend_email = 2;
}

message DeleteFriendResponse {
    optional string error = 1;
}